--- a/index.html
+++ b/index.html
@@ -257,8 +257,8 @@
         <div class="container-fluid donation py-5">
             <div class="container py-5">
                 <div class="text-center mx-auto pb-5" style="max-width: 800px;">
-                    <h5 class="text-uppercase text-primary">Donation</h5>
-                    <h1 class="mb-0">Your money will save our life</h1>
+                    <h5 class="text-uppercase text-primary">The Positive Side</h5>
+                    <h1 class="mb-0">How Golf Courses Benefit the Nature</h1>
                 </div>
                 <div class="row g-4">
                     <div class="col-lg-4">
@@ -270,7 +270,7 @@
                                 <h4 class="text-white mb-4">Protect Environments</h4>
                                 <p class="text-white mb-4">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's</p>
                                 <div class="donation-btn d-flex align-items-center justify-content-start">
-                                    <a class="btn-hover-bg btn btn-primary text-white py-2 px-4" href="#">Donate !</a>
+                                    <a class="btn-hover-bg btn btn-primary text-white py-2 px-4" href="#">Read More</a>
                                 </div>
                             </div>
                         </div>
@@ -301,11 +301,6 @@
                                     <a class="btn-hover-bg btn btn-primary text-white py-2 px-4" href="#">Donate !</a>
                                 </div>
                             </div>
-                        </div>
-                    </div>
-                    <div class="col-12">
-                        <div class="d-flex align-items-center justify-content-center">
-                            <a class="btn-hover-bg btn btn-primary text-white py-2 px-4" href="#">All Donation</a>
                         </div>
                     </div>
                 </div>
@@ -736,93 +731,13 @@
         <div class="container-fluid footer bg-dark text-body py-5">
             <div class="container py-5">
                 <div class="row g-5">
-                    <div class="col-md-6 col-lg-6 col-xl-3">
-                        <div class="footer-item">
-                            <h4 class="mb-4 text-white">Newsletter</h4>
-                            <p class="mb-4">Dolor amet sit justo amet elitr clita ipsum elitr est.Lorem ipsum dolor sit amet, consectetur adipiscing elit consectetur adipiscing elit.</p>
-                            <div class="position-relative mx-auto">
-                                <input class="form-control border-0 bg-secondary w-100 py-3 ps-4 pe-5" type="text" placeholder="Enter your email">
-                                <button type="button" class="btn-hover-bg btn btn-primary position-absolute top-0 end-0 py-2 mt-2 me-2">SignUp</button>
-                            </div>
-                        </div>
+                    <div class="footer-item">
+                        <h4 class="mb-4 text-white">Golf Courses & Environmental Science</h4>
+                        <p class="mb-4">If you have questions about this website, feel free
+                            to contact me via <a href="mailto:xuanye_wang@ucsb.edu">email</a>.
+                        </p>
                     </div>
-                    <div class="col-md-6 col-lg-6 col-xl-3">
-                        <div class="footer-item d-flex flex-column">
-                            <h4 class="mb-4 text-white">Our Services</h4>
-                            <a href=""><i class="fas fa-angle-right me-2"></i> Ocean Turtle</a>
-                            <a href=""><i class="fas fa-angle-right me-2"></i> White Tiger</a>
-                            <a href=""><i class="fas fa-angle-right me-2"></i> Social Ecology</a>
-                            <a href=""><i class="fas fa-angle-right me-2"></i> Loneliness</a>
-                            <a href=""><i class="fas fa-angle-right me-2"></i> Beauty of Life</a>
-                            <a href=""><i class="fas fa-angle-right me-2"></i> Present for You</a>
-                        </div>
-                    </div>
-                    <div class="col-md-6 col-lg-6 col-xl-3">
-                        <div class="footer-item d-flex flex-column">
-                            <h4 class="mb-4 text-white">Volunteer</h4>
-                            <a href=""><i class="fas fa-angle-right me-2"></i> Karen Dawson</a>
-                            <a href=""><i class="fas fa-angle-right me-2"></i> Jack Simmons</a>
-                            <a href=""><i class="fas fa-angle-right me-2"></i> Michael Linden</a>
-                            <a href=""><i class="fas fa-angle-right me-2"></i> Simon Green</a>
-                            <a href=""><i class="fas fa-angle-right me-2"></i> Natalie Channing</a>
-                            <a href=""><i class="fas fa-angle-right me-2"></i> Caroline Gerwig</a>
-                        </div>
-                    </div>
-                    <div class="col-md-6 col-lg-6 col-xl-3">
-                        <div class="footer-item">
-                            <h4 class="mb-4 text-white">Our Gallery</h4>
-                            <div class="row g-2">
-                                <div class="col-4">
-                                    <div class="footer-gallery">
-                                        <img src="img/gallery-footer-1.jpg" class="img-fluid w-100" alt="">
-                                        <div class="footer-search-icon">
-                                            <a href="img/gallery-footer-1.jpg" data-lightbox="footerGallery-1" class="my-auto"><i class="fas fa-search-plus text-white"></i></a>
-                                        </div>
-                                    </div>
-                               </div>
-                               <div class="col-4">
-                                    <div class="footer-gallery">
-                                        <img src="img/gallery-footer-2.jpg" class="img-fluid w-100" alt="">
-                                        <div class="footer-search-icon">
-                                            <a href="img/gallery-footer-2.jpg" data-lightbox="footerGallery-2" class="my-auto"><i class="fas fa-search-plus text-white"></i></a>
-                                        </div>
-                                    </div>
-                               </div>
-                                <div class="col-4">
-                                    <div class="footer-gallery">
-                                        <img src="img/gallery-footer-3.jpg" class="img-fluid w-100" alt="">
-                                        <div class="footer-search-icon">
-                                            <a href="img/gallery-footer-3.jpg" data-lightbox="footerGallery-3" class="my-auto"><i class="fas fa-search-plus text-white"></i></a>
-                                        </div>
-                                    </div>
-                               </div>
-                                <div class="col-4">
-                                    <div class="footer-gallery">
-                                        <img src="img/gallery-footer-4.jpg" class="img-fluid w-100" alt="">
-                                        <div class="footer-search-icon">
-                                            <a href="img/gallery-footer-4.jpg" data-lightbox="footerGallery-4" class="my-auto"><i class="fas fa-search-plus text-white"></i></a>
-                                        </div>
-                                    </div>
-                               </div>
-                                <div class="col-4">
-                                    <div class="footer-gallery">
-                                        <img src="img/gallery-footer-5.jpg" class="img-fluid w-100" alt="">
-                                        <div class="footer-search-icon">
-                                            <a href="img/gallery-footer-5.jpg" data-lightbox="footerGallery-5" class="my-auto"><i class="fas fa-search-plus text-white"></i></a>
-                                        </div>
-                                    </div>
-                               </div>
-                               <div class="col-4">
-									<div class="footer-gallery">
-										<img src="img/gallery-footer-6.jpg" class="img-fluid w-100" alt="">
-                                        <div class="footer-search-icon">
-                                            <a href="img/gallery-footer-6.jpg" data-lightbox="footerGallery-6" class="my-auto"><i class="fas fa-search-plus text-white"></i></a>
-                                        </div>
-									</div>
-								</div>
-                            </div>
-                        </div>
-                    </div>
+                    
                 </div>
             </div>
         </div>
