--- a/index.html
+++ b/index.html
@@ -183,8 +183,8 @@
         <div class="container-fluid service py-5 bg-light">
             <div class="container py-5">
                 <div class="text-center mx-auto pb-5" style="max-width: 800px;">
-                    <h5 class="text-uppercase text-primary">Negative Impact</h5>
-                    <h1 class="mb-0">How golf courses negatively impact the nature</h1>
+                    <h5 class="text-uppercase text-primary">Slow Violence</h5>
+                    <h1 class="mb-0">How Golf Courses Negatively Impact the Nature</h1>
                 </div>
                 <div class="row g-4">
                     <!-- <div class="col-md-6 col-lg-6 col-xl-3"> -->
@@ -214,7 +214,7 @@
                         <div class="service-item" style="border-radius: 5%;">
                             <img src="img/course_irrigation.jpg" class="img-fluid w-100" alt="Image">
                             <div class="service-link">
-                                <a href="#" class="h4 mb-0">Water Consumption</a>
+                                <a href="water_consumption.html" class="h4 mb-0">Water Consumption</a>
                             </div>
                         </div>
                         <p class="my-4">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
