--- a/increase_biodiversity.html
+++ b/increase_biodiversity.html
@@ -42,48 +42,25 @@
         <div class="container-fluid about  py-5">
             <div class="container py-5">
                 <div class="row g-5">
-                    <h5 class="text-uppercase text-primary">Soil Erosion</h5>
-                        <h1 class="mb-4">How Golf Courses Cause Soil Erosion</h1>
+                    <h5 class="text-uppercase text-primary">Biodiversity</h5>
+                        <h1 class="mb-4">Contextual Considerations</h1>
                         <p class="fs-5 mb-4">
-                            Intuitively, it is hard to connect golf courses with environmental damages because of how beautiful they are. However,
-                            if you look closely, their manicured fairways and sculpted landscapes often represent significant modifications to natural environments.
-                            As of 2018, it is <a href="https://www.greenmatters.com/p/golf-courses-environmental-impact">reported</a> that over 2 million acres of
-                            the United States are designated to golf courses. This large amount of land use must presented considerable erosion challenges.
+                            Although golf courses are often criticized for their environmental impacts, we can't conclude that all golf courses are bad for the environment. 
+                            It all depends on their specific context and management approaches. As argued by <a href="https://www.stockholmresilience.org/publications/publications/2009-12-29-the-role-of-golf-courses-in-biodiversity-conservation-and-ecosystem-management.html">a researcher</a>, 
+                            while golf courses constructed in pristine natural environments typically reduce ecological value, those established 
+                            in ecologically simplified landscapes such as urban areas or former agricultural lands can actually enhance local biodiversity and 
+                            ecosystem function.
+                            <br><br>
+                            The management practices also critically influences environmental outcomes. Courses managed with ecological principles in mind, such as 
+                            incorporating native vegetation, minimizing chemical inputs, conserving water, and protecting wildlife habitats, can deliver significant 
+                            environmental benefits. Conversely, courses that prioritize aesthetics and playability over ecological considerations can have substantial 
+                            environmental harm. Therefore, this variation highlights the dualism of golf courses, indicating the importance of 
+                            management practices.
+                            <br><br>
+                            Related Articles: <a href="https://www.stockholmresilience.org/publications/publications/2009-12-29-the-role-of-golf-courses-in-biodiversity-conservation-and-ecosystem-management.html">The role of golf courses in biodiversity conservation and ecosystem management</a>
                         </p>
 
-                        <figure>
-                            <img src="img/golf_course_construction.avif" class="d-block mx-auto" alt="Image" style="border-radius: 20px; width: 50%;">
-                            <figcaption class="text-center mt-2">Construction of a golf course significantly modifies the natural landscapes. <a href="https://www.usga.org/content/usga/home-page/course-care/green-section-record/60/04/navigating-the-15-steps-of-course-renovation.html">Source</a></figcaption>
-                        </figure>
-
-                        <p class="fs-5 mb-4">
-                            During the construction of golf courses, vast areas are  stripped of native vegetation to create fairways, greens, tees, and other course features
-                            (artificial lakes, bunkers, etc.). This phase exposes bare soil directly to the erosive forces of rainfalls and wind without protection.
-                        </p>
-
-                        <figure>
-                            <img src="img/fairway.webp" class="d-block mx-auto" alt="Image" style="border-radius: 20px; width: 50%;">
-                            <figcaption class="text-center mt-2">A typical golf hole. <a href="https://www.golfmonthly.com/features/what-is-a-fairway-in-golf">Source</a></figcaption>
-                        </figure>
-                        
-                        <p class="fs-5 mb-4">
-                            Besides that, the intensive maintenance practices of golf courses also contribute to soil erosion. In pursuit of a fast green speed,
-                            heavy machinery such as greens rollers and mowers are often used to maintain the turf. These machines compact the soil, reducing its
-                            ability to absorb water and increasing the runoff rate. Frequent mowing keeps grass blades short, which correlates with less extensive root development. As a result, the shallow-rooted turf
-                            is less effective in anchoring the soil that natural vegetation, making it more vulnerable to being dislodged and transported by water or wind.
-                        </p>
-
-                        <figure>
-                            <img src="img/green_roller.webp" class="d-block mx-auto" alt="Image" style="border-radius: 20px; width: 50%;">
-                            <figcaption class="text-center mt-2">A green roller, which compacts the green to make golf balls roll on it faster. <a href="https://www.truturf.com/">Source</a></figcaption>
-                        </figure>
-                        <p class="fs-5 mb-4">
-                            Another important factor is player traffic. Areas with concentrated foot traffic, such as tees, greens, and fairways if carts
-                            are allowed, are more prone to experience soil compaction, and eventually easier to erode.
-                            <br><br><br>
-                            Related Articles: <a href="https://www.ecologicalimprovements.com/blog/why-golf-course-erosion-is-a-bigger-deal-than-you-think">Why Golf Course Erosion is a bigger deal than you think</a>,
-                            <a href="https://www.stormwater.com/erosion-control/vegetation-management/article/13000945/erosion-control-on-golf-course-construction-projects">Erosion Control on Golf Course Construction Projects</a>
-                        </p>
+                    
 
                         <div class="col-12">
                             <div class="d-flex align-items-center justify-content-center">
