--- a/water_consumption.html
+++ b/water_consumption.html
@@ -110,6 +110,8 @@
                         <h4 class="mb-4 text-white">Golf Courses & Environmental Science</h4>
                         <p class="mb-4">If you have questions about, or ideas on how to improve this website, feel free
                             to contact me via <a href="mailto:xuanye_wang@ucsb.edu" style="color: #f8b864;">email</a>.
+                            <br>
+                            <a href="https://github.com/KeeevinW/KeeevinW.github.io" style="color: #f8b864;">Source Code</a>
                         </p>
                     </div>
                     
