--- a/heat_island.html
+++ b/heat_island.html
@@ -42,48 +42,25 @@
         <div class="container-fluid about  py-5">
             <div class="container py-5">
                 <div class="row g-5">
-                    <h5 class="text-uppercase text-primary">Soil Erosion</h5>
-                        <h1 class="mb-4">How Golf Courses Cause Soil Erosion</h1>
+                    <h5 class="text-uppercase text-primary">Cool</h5>
+                        <h1 class="mb-4">Urban Heat Island Mitigation</h1>
                         <p class="fs-5 mb-4">
-                            Intuitively, it is hard to connect golf courses with environmental damages because of how beautiful they are. However,
-                            if you look closely, their manicured fairways and sculpted landscapes often represent significant modifications to natural environments.
-                            As of 2018, it is <a href="https://www.greenmatters.com/p/golf-courses-environmental-impact">reported</a> that over 2 million acres of
-                            the United States are designated to golf courses. This large amount of land use must presented considerable erosion challenges.
+                            According to United States Environmental Protection Agency, <a href="https://www.epa.gov/heatislands/learn-about-heat-island-effects">heat islands</a> are urban areas where the temperature is significantly higher 
+                            than its surrounding outlying areas. Since structures such as roads, buildings, and other infrastructure are able to absord and re-emit 
+                            the sun's heat more than natural landscapes, urban areas, where these structures are highly concentrated and greenery is limited, thus tend to 
+                            have higher temperature, usually 1-7°F in daytime and 2-5°F in nighttime higher than temperatures in outlying areas.
+                            <br><br>
+                            In urban environment, the extensive vegetation and open space can significantly cool the surrounding air, helping to <a href="https://www.usga.org/content/usga/home-page/course-care/green-section-record/62/issue-07/5-things-to-know-about-golf-courses-and-the-environment.html">mitigate the 
+                            urban heat island effect</a>. Especially as climate change intensifies heat waves and thermal stress in cities, such thermal 
+                            regulation service provided by green spaces provides tangible environmental and social benefits.
                         </p>
 
                         <figure>
-                            <img src="img/golf_course_construction.avif" class="d-block mx-auto" alt="Image" style="border-radius: 20px; width: 50%;">
-                            <figcaption class="text-center mt-2">Construction of a golf course significantly modifies the natural landscapes. <a href="https://www.usga.org/content/usga/home-page/course-care/green-section-record/60/04/navigating-the-15-steps-of-course-renovation.html">Source</a></figcaption>
+                            <img src="img/city_golf_course.jpg" class="d-block mx-auto" alt="Image" style="border-radius: 20px; width: 50%;">
+                            <figcaption class="text-center mt-2">A city golf course in Chicago. <a href="https://www.choosechicago.com/articles/sports-and-recreation/chicago-golf-courses/">Source</a></figcaption>
                         </figure>
 
-                        <p class="fs-5 mb-4">
-                            During the construction of golf courses, vast areas are  stripped of native vegetation to create fairways, greens, tees, and other course features
-                            (artificial lakes, bunkers, etc.). This phase exposes bare soil directly to the erosive forces of rainfalls and wind without protection.
-                        </p>
-
-                        <figure>
-                            <img src="img/fairway.webp" class="d-block mx-auto" alt="Image" style="border-radius: 20px; width: 50%;">
-                            <figcaption class="text-center mt-2">A typical golf hole. <a href="https://www.golfmonthly.com/features/what-is-a-fairway-in-golf">Source</a></figcaption>
-                        </figure>
-                        
-                        <p class="fs-5 mb-4">
-                            Besides that, the intensive maintenance practices of golf courses also contribute to soil erosion. In pursuit of a fast green speed,
-                            heavy machinery such as greens rollers and mowers are often used to maintain the turf. These machines compact the soil, reducing its
-                            ability to absorb water and increasing the runoff rate. Frequent mowing keeps grass blades short, which correlates with less extensive root development. As a result, the shallow-rooted turf
-                            is less effective in anchoring the soil that natural vegetation, making it more vulnerable to being dislodged and transported by water or wind.
-                        </p>
-
-                        <figure>
-                            <img src="img/green_roller.webp" class="d-block mx-auto" alt="Image" style="border-radius: 20px; width: 50%;">
-                            <figcaption class="text-center mt-2">A green roller, which compacts the green to make golf balls roll on it faster. <a href="https://www.truturf.com/">Source</a></figcaption>
-                        </figure>
-                        <p class="fs-5 mb-4">
-                            Another important factor is player traffic. Areas with concentrated foot traffic, such as tees, greens, and fairways if carts
-                            are allowed, are more prone to experience soil compaction, and eventually easier to erode.
-                            <br><br><br>
-                            Related Articles: <a href="https://www.ecologicalimprovements.com/blog/why-golf-course-erosion-is-a-bigger-deal-than-you-think">Why Golf Course Erosion is a bigger deal than you think</a>,
-                            <a href="https://www.stormwater.com/erosion-control/vegetation-management/article/13000945/erosion-control-on-golf-course-construction-projects">Erosion Control on Golf Course Construction Projects</a>
-                        </p>
+                    
 
                         <div class="col-12">
                             <div class="d-flex align-items-center justify-content-center">
