--- a/management.html
+++ b/management.html
@@ -42,48 +42,34 @@
         <div class="container-fluid about  py-5">
             <div class="container py-5">
                 <div class="row g-5">
-                    <h5 class="text-uppercase text-primary">Soil Erosion</h5>
-                        <h1 class="mb-4">How Golf Courses Cause Soil Erosion</h1>
+                    <h5 class="text-uppercase text-primary">Sustainability</h5>
+                        <h1 class="mb-4">Sustainable Golf Course Management</h1>
                         <p class="fs-5 mb-4">
-                            Intuitively, it is hard to connect golf courses with environmental damages because of how beautiful they are. However,
-                            if you look closely, their manicured fairways and sculpted landscapes often represent significant modifications to natural environments.
-                            As of 2018, it is <a href="https://www.greenmatters.com/p/golf-courses-environmental-impact">reported</a> that over 2 million acres of
-                            the United States are designated to golf courses. This large amount of land use must presented considerable erosion challenges.
+                            In recent years, the golf industry has begun embracing more sustainable approaches to course design and management, 
+                            aiming to minimize the nagative environment impacts and enhance the ecological benefits of golf courses. In particular, 
+                            some courses have adopted esustainable agronomy practices to reduce consumption of natural resources such as water, decrease 
+                            the usage of fertilizers and pesticides, and increase biological value. For example, over 98% of all lizard orchids can be found 
+                            at Royal St George's, venue for The Open. Besides being an oasis for this species, the course also help them to spread out 
+                            and into the immediate countryside (<a href="https://www.randa.org/en/sustainability/environmental-benefits">Source</a>).
                         </p>
 
                         <figure>
-                            <img src="img/golf_course_construction.avif" class="d-block mx-auto" alt="Image" style="border-radius: 20px; width: 50%;">
-                            <figcaption class="text-center mt-2">Construction of a golf course significantly modifies the natural landscapes. <a href="https://www.usga.org/content/usga/home-page/course-care/green-section-record/60/04/navigating-the-15-steps-of-course-renovation.html">Source</a></figcaption>
+                            <img src="img/st_george's.webp" class="d-block mx-auto" alt="Image" style="border-radius: 20px; width: 50%;">
+                            <figcaption class="text-center mt-2">Royal St George's Golf Course. <a href="https://www.randa.org/en/sustainability/environmental-benefits">Source</a></figcaption>
                         </figure>
 
                         <p class="fs-5 mb-4">
-                            During the construction of golf courses, vast areas are  stripped of native vegetation to create fairways, greens, tees, and other course features
-                            (artificial lakes, bunkers, etc.). This phase exposes bare soil directly to the erosive forces of rainfalls and wind without protection.
+                            Furthermore, innovative golf course managers are implementing practices such as 
+                            <a href="https://dte.golf/sustainable-practices-in-golf-course-renovation/">
+                                establishing native plant landscaping, conserving soil health, utilizing solar-powered amenities,a dn restoring wetlands.
+                            </a>
+                            These approaches not only reduce environmental impacts but can enhance the playing experience by creating more visually interesting 
+                            and ecologically rich landscapes. The golf industry's growing commitment to sustainability represents an important shift in how courses 
+                            are conceived and managed.
+
                         </p>
 
-                        <figure>
-                            <img src="img/fairway.webp" class="d-block mx-auto" alt="Image" style="border-radius: 20px; width: 50%;">
-                            <figcaption class="text-center mt-2">A typical golf hole. <a href="https://www.golfmonthly.com/features/what-is-a-fairway-in-golf">Source</a></figcaption>
-                        </figure>
-                        
-                        <p class="fs-5 mb-4">
-                            Besides that, the intensive maintenance practices of golf courses also contribute to soil erosion. In pursuit of a fast green speed,
-                            heavy machinery such as greens rollers and mowers are often used to maintain the turf. These machines compact the soil, reducing its
-                            ability to absorb water and increasing the runoff rate. Frequent mowing keeps grass blades short, which correlates with less extensive root development. As a result, the shallow-rooted turf
-                            is less effective in anchoring the soil that natural vegetation, making it more vulnerable to being dislodged and transported by water or wind.
-                        </p>
-
-                        <figure>
-                            <img src="img/green_roller.webp" class="d-block mx-auto" alt="Image" style="border-radius: 20px; width: 50%;">
-                            <figcaption class="text-center mt-2">A green roller, which compacts the green to make golf balls roll on it faster. <a href="https://www.truturf.com/">Source</a></figcaption>
-                        </figure>
-                        <p class="fs-5 mb-4">
-                            Another important factor is player traffic. Areas with concentrated foot traffic, such as tees, greens, and fairways if carts
-                            are allowed, are more prone to experience soil compaction, and eventually easier to erode.
-                            <br><br><br>
-                            Related Articles: <a href="https://www.ecologicalimprovements.com/blog/why-golf-course-erosion-is-a-bigger-deal-than-you-think">Why Golf Course Erosion is a bigger deal than you think</a>,
-                            <a href="https://www.stormwater.com/erosion-control/vegetation-management/article/13000945/erosion-control-on-golf-course-construction-projects">Erosion Control on Golf Course Construction Projects</a>
-                        </p>
+                    
 
                         <div class="col-12">
                             <div class="d-flex align-items-center justify-content-center">
