everything except for case study

--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
                 <div class="row g-4">
                     <div class="col-lg-4">
                         <div class="donation-item">
-                            <img src="img/donation-1.jpg" class="img-fluid w-100" alt="Image">
+                            <img src="img/city_golf2.jpg" class="img-fluid w-100" alt="Image">
                             <div class="donation-content d-flex flex-column">
                                 <h5 class="text-uppercase text-primary mb-4">Cool</h5>
                                 <a href="heat_island.html" class="btn-hover-color display-6 text-white">Urban Heat Island Mitigation</a>
@@ -255,7 +255,7 @@
                     </div>
                     <div class="col-lg-4">
                         <div class="donation-item">
-                            <img src="img/service-2.jpg" class="img-fluid w-100" alt="Image">
+                            <img src="img/birds_on_course.webp" class="img-fluid w-100" alt="Image">
                             <div class="donation-content d-flex flex-column">
                                 <h5 class="text-uppercase text-primary mb-4">Sustainability</h5>
                                 <a href="management.html" class="btn-hover-color display-6 text-white">Sustainable Golf Course Management</a>
@@ -268,7 +268,7 @@
                     </div>
                     <div class="col-lg-4">
                         <div class="donation-item">
-                            <img src="img/donation-3.jpg" class="img-fluid w-100" alt="Image">
+                            <img src="img/eco_golf.jpg" class="img-fluid w-100" alt="Image">
                             <div class="donation-content d-flex flex-column">
                                 <h5 class="text-uppercase text-primary mb-4">Biodiversity</h5>
                                 <a href="increase_biodiversity.html" class="btn-hover-color display-6 text-white">Contextual Considerations</a>
