add sandpiper case study

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                                 <p class="mb-5 fs-5">
                                 </p>
                                 <div class="d-flex align-items-center justify-content-center">
-                                    <a class="btn-hover-bg btn btn-primary text-white py-3 px-5" href="#">Coming Soon...</a>
+                                    <a class="btn-hover-bg btn btn-primary text-white py-3 px-5" href="sandpiper.html">Read More</a>
                                 </div>
                             </div>
                         </div>
