--- a/habitat_disruption.html
+++ b/habitat_disruption.html
@@ -95,7 +95,7 @@
                         requiring expensive remediation efforts.
                         <br><br>
                         To improve the situation of habitat disruption caused by golf courses, in January 2018, Audubon International and Environmental 
-                        Defense Fund parthered to la.unch <a href="https://www.greenmatters.com/p/golf-courses-monarch-butterfly-habitats">Monarchs in the Rough</a> program, which guides golf courses in planting monarch butterfly, which has declined by about 90 percent over the past 20 years, habitats in out-of-play 
+                        Defense Fund parthered to launch <a href="https://www.greenmatters.com/p/golf-courses-monarch-butterfly-habitats">Monarchs in the Rough</a> program, which guides golf courses in planting monarch butterfly, which has declined by about 90 percent over the past 20 years, habitats in out-of-play 
                         areas along the course. Till now, this program has helped more than 300 golf courses to build butterfly habitats.
                         </p>
 
