delete unused files and fix grammatical errors

--- a/index.html
+++ b/index.html
@@ -140,10 +140,9 @@
                         <h1 class="mb-4">How Golf Courses Impact the Environment</h1>
                         <p class="fs-5 mb-4">
                             In China, the golf market peaked in 2014, when the number of golf courses reached more than 1400. More than ten years later,
-                            now, nearly one thousand of them have been shut down. Despite the economical and political reasons, the environmental impact
-                            also plays a significant role in the decision-making process. They were claimed to be water-consuming, pesticide-using, and
-                            causing soil erosion, etc. As a golfer, it was frustrating to witness this decline. I was unconvinced by the environmental
-                            accusations, because for me, and a lot of people, golf courses represent grass, trees, and lakes, which are the symbols of nature. Therefore, I decided
+                            now, nearly one thousand of them have been shut down. Despite the economic and political reasons, the environmental impact
+                            also plays a significant role in the decision-making process. They were criticized for high water consumption, pesticide use, and causing soil erosion. As a golfer, it was frustrating to witness this decline. 
+                            I was unconvinced by the environmental accusations, because for me, and many others, golf courses represent grass, trees, and lakes, which are the symbols of nature. Therefore, I decided
                             to investigate the environmental impact of golf courses and build this website to share my findings. This project serves as the
                             final project for ENV S 3 at UCSB, specifically, I will talk about how golf courses influence the environment, both positively
                             and negatively, and propose potential solutions that can mitigate the negative impacts and replace arbitrary shutdown of golf courses.
@@ -199,7 +198,7 @@
                         <br>
                         Slow Violence, by definition, is the idea that environmental damages are not immediate, but rather, they accumulate over time. 
                         Golf courses, despite their beauty, are not immune to this concept. The above sections will discuss how golf courses negatively 
-                        impact the environment behind the surface. Please click on the texts to learn more.
+                        impact the environment beyond their appearance. Please click on the texts to learn more.
                     </p>
                 
                 </div>
@@ -290,7 +289,7 @@
             <div class="container">
                 <div class="row g-4 align-items-center">
                     <div class="col-md-4 text-center text-md-start mb-md-0">
-                        <span class="text-body"><i class="fas fa-copyright text-light me-2"></i>Xuanye Wang, All right reserved.</span>
+                        <span class="text-body"><i class="fas fa-copyright text-light me-2"></i>Xuanye Wang, All rights reserved.</span>
                     </div>
                     <div class="col-md-4 text-center">
                         <div class="d-flex align-items-center justify-content-center">
