--- a/heat_island.html
+++ b/heat_island.html
@@ -104,7 +104,7 @@
             <div class="container">
                 <div class="row g-4 align-items-center">
                     <div class="col-md-4 text-center text-md-start mb-md-0">
-                        <span class="text-body"><i class="fas fa-copyright text-light me-2"></i>Xuanye Wang, All right reserved.</span>
+                        <span class="text-body"><i class="fas fa-copyright text-light me-2"></i>Xuanye Wang, All rights reserved.</span>
                     </div>
                     <div class="col-md-4 text-center">
                         <div class="d-flex align-items-center justify-content-center">
