fix typo and grammatical errors

--- a/heat_island.html
+++ b/heat_island.html
@@ -46,13 +46,13 @@
                         <h1 class="mb-4">Urban Heat Island Mitigation</h1>
                         <p class="fs-5 mb-4">
                             According to United States Environmental Protection Agency, <a href="https://www.epa.gov/heatislands/learn-about-heat-island-effects">heat islands</a> are urban areas where the temperature is significantly higher 
-                            than its surrounding outlying areas. Since structures such as roads, buildings, and other infrastructure are able to absord and re-emit 
+                            than its surrounding outlying areas. Since structures such as roads, buildings, and other infrastructure are able to absorb and re-emit 
                             the sun's heat more than natural landscapes, urban areas, where these structures are highly concentrated and greenery is limited, thus tend to 
-                            have higher temperature, usually 1-7°F in daytime and 2-5°F in nighttime higher than temperatures in outlying areas.
+                            have higher temperature, usually 1-7°F in daytime and 2-5°F in nighttime, than temperatures in outlying areas.
                             <br><br>
                             In urban environment, the extensive vegetation and open space can significantly cool the surrounding air, helping to <a href="https://www.usga.org/content/usga/home-page/course-care/green-section-record/62/issue-07/5-things-to-know-about-golf-courses-and-the-environment.html">mitigate the 
                             urban heat island effect</a>. Especially as climate change intensifies heat waves and thermal stress in cities, such thermal 
-                            regulation service provided by green spaces provides tangible environmental and social benefits.
+                            regulation service offered by green spaces provides tangible environmental and social benefits.
                         </p>
 
                         <figure>
@@ -104,7 +104,7 @@
             <div class="container">
                 <div class="row g-4 align-items-center">
                     <div class="col-md-4 text-center text-md-start mb-md-0">
-                        <span class="text-body"><i class="fas fa-copyright text-light me-2"></i>Xuanye Wang, All rights reserved.</span>
+                        <span class="text-body"><i class="fas fa-copyright text-light me-2"></i>Xuanye Wang, all rights reserved.</span>
                     </div>
                     <div class="col-md-4 text-center">
                         <div class="d-flex align-items-center justify-content-center">
