--- a/increase_biodiversity.html
+++ b/increase_biodiversity.html
@@ -51,7 +51,7 @@
                             in ecologically simplified landscapes such as urban areas or former agricultural lands can actually enhance local biodiversity and 
                             ecosystem function.
                             <br><br>
-                            The management practices also critically influences environmental outcomes. Courses managed with ecological principles in mind, such as 
+                            The management practices also critically influence environmental outcomes. Courses managed with ecological principles in mind, such as 
                             incorporating native vegetation, minimizing chemical inputs, conserving water, and protecting wildlife habitats, can deliver significant 
                             environmental benefits. Conversely, courses that prioritize aesthetics and playability over ecological considerations can have substantial 
                             environmental harm. Therefore, this variation highlights the dualism of golf courses, indicating the importance of 
@@ -104,7 +104,7 @@
             <div class="container">
                 <div class="row g-4 align-items-center">
                     <div class="col-md-4 text-center text-md-start mb-md-0">
-                        <span class="text-body"><i class="fas fa-copyright text-light me-2"></i>Xuanye Wang, All rights reserved.</span>
+                        <span class="text-body"><i class="fas fa-copyright text-light me-2"></i>Xuanye Wang, all rights reserved.</span>
                     </div>
                     <div class="col-md-4 text-center">
                         <div class="d-flex align-items-center justify-content-center">
