--- a/management.html
+++ b/management.html
@@ -46,10 +46,10 @@
                         <h1 class="mb-4">Sustainable Golf Course Management</h1>
                         <p class="fs-5 mb-4">
                             In recent years, the golf industry has begun embracing more sustainable approaches to course design and management, 
-                            aiming to minimize the nagative environment impacts and enhance the ecological benefits of golf courses. In particular, 
-                            some courses have adopted esustainable agronomy practices to reduce consumption of natural resources such as water, decrease 
+                            aiming to minimize the negative environmental impacts and enhance the ecological benefits of golf courses. In particular, 
+                            some courses have adopted sustainable agronomy practices to reduce consumption of natural resources such as water, decrease 
                             the usage of fertilizers and pesticides, and increase biological value. For example, over 98% of all lizard orchids can be found 
-                            at Royal St George's, venue for The Open. Besides being an oasis for this species, the course also help them to spread out 
+                            at Royal St George's, venue for The Open. Besides being an oasis for this species, the course also helps them to spread out 
                             and into the immediate countryside (<a href="https://www.randa.org/en/sustainability/environmental-benefits">Source</a>).
                         </p>
 
@@ -61,7 +61,7 @@
                         <p class="fs-5 mb-4">
                             Furthermore, innovative golf course managers are implementing practices such as 
                             <a href="https://dte.golf/sustainable-practices-in-golf-course-renovation/">
-                                establishing native plant landscaping, conserving soil health, utilizing solar-powered amenities,a dn restoring wetlands.
+                                establishing native plant landscaping, conserving soil health, utilizing solar-powered amenities, and restoring wetlands.
                             </a>
                             These approaches not only reduce environmental impacts but can enhance the playing experience by creating more visually interesting 
                             and ecologically rich landscapes. The golf industry's growing commitment to sustainability represents an important shift in how courses 
@@ -113,7 +113,7 @@
             <div class="container">
                 <div class="row g-4 align-items-center">
                     <div class="col-md-4 text-center text-md-start mb-md-0">
-                        <span class="text-body"><i class="fas fa-copyright text-light me-2"></i>Xuanye Wang, All rights reserved.</span>
+                        <span class="text-body"><i class="fas fa-copyright text-light me-2"></i>Xuanye Wang, all rights reserved.</span>
                     </div>
                     <div class="col-md-4 text-center">
                         <div class="d-flex align-items-center justify-content-center">
