--- a/soil_erosion.html
+++ b/soil_erosion.html
@@ -48,7 +48,7 @@
                             Intuitively, it is hard to connect golf courses with environmental damages because of how beautiful they are. However,
                             if you look closely, their manicured fairways and sculpted landscapes often represent significant modifications to natural environments.
                             As of 2018, it is <a href="https://www.greenmatters.com/p/golf-courses-environmental-impact">reported</a> that over 2 million acres of
-                            the United States are designated to golf courses. This large amount of land use must presented considerable erosion challenges.
+                            the United States are designated for golf courses. This large amount of land use must present considerable erosion challenges.
                         </p>
 
                         <figure>
@@ -58,7 +58,7 @@
 
                         <p class="fs-5 mb-4">
                             During the construction of golf courses, vast areas are  stripped of native vegetation to create fairways, greens, tees, and other course features
-                            (artificial lakes, bunkers, etc.). This phase exposes bare soil directly to the erosive forces of rainfalls and wind without protection.
+                            (artificial lakes, bunkers, etc.). This phase exposes bare soil directly to the erosive forces of rainfall and wind without protection.
                         </p>
 
                         <figure>
@@ -70,7 +70,7 @@
                             Besides that, the intensive maintenance practices of golf courses also contribute to soil erosion. In pursuit of a fast green speed,
                             heavy machinery such as greens rollers and mowers are often used to maintain the turf. These machines compact the soil, reducing its
                             ability to absorb water and increasing the runoff rate. Frequent mowing keeps grass blades short, which correlates with less extensive root development. As a result, the shallow-rooted turf
-                            is less effective in anchoring the soil that natural vegetation, making it more vulnerable to being dislodged and transported by water or wind.
+                            is less effective in anchoring the soil than natural vegetation, making it more vulnerable to being dislodged and transported by water or wind.
                         </p>
 
                         <figure>
@@ -127,7 +127,7 @@
             <div class="container">
                 <div class="row g-4 align-items-center">
                     <div class="col-md-4 text-center text-md-start mb-md-0">
-                        <span class="text-body"><i class="fas fa-copyright text-light me-2"></i>Xuanye Wang, All rights reserved.</span>
+                        <span class="text-body"><i class="fas fa-copyright text-light me-2"></i>Xuanye Wang, all rights reserved.</span>
                     </div>
                     <div class="col-md-4 text-center">
                         <div class="d-flex align-items-center justify-content-center">
